name:                hml
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hml#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Parse, Eval, Alpha, KNormal, Closure
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , containers
  default-language:    Haskell2010

executable hml-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hml
  default-language:    Haskell2010

test-suite hml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hml
