name:                hml
version:             0.1.0.0
synopsis:            A compiler from ML like language to MIPS assembly
description:         A compiler from ML like language to MIPS assembly
homepage:            https://github.com/githubuser/hml#readme
author:              a_kawashiro
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Programming Language Processing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Parse, KNormal, Alpha
  -- , Alpha, KNormal, Closure, Flat, Declare, Call, Register, Stack, EtaLong
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , containers
                     , transformers
                     , either
                     , optparse-declarative
  default-language:    Haskell2010

executable hml-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hml
                     , optparse-declarative
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hml
